add headers to files